Se Agrego hilos a prediccin,historial de consulta a la busqueda de un juador